# cmux

Sources/: TerminalController.swift
docs/: ghostty-fork.md  linux-wayland.md
fixtures/session/: app-session.linux-wayland-v1.sample.json
fixtures/socket-v2/: capability-matrix.json  system.capabilities.linux-wayland-v1.json  system.capabilities.macos.json
linux/: Cargo.toml  cmux-linux.desktop
linux/cmux-linux/: Cargo.toml
linux/cmux-linux/src/: app.rs  capabilities.rs  config.rs  main.rs  model.rs  session.rs  socket.rs  state.rs  terminal_host.rs
scripts/: build-linux.sh  linux_wayland_doctor.py  run-linux.sh
tests_v2/: capability_matrix.py  cmux.py  test_capability_matrix_contract.py  test_linux_wayland_doctor.py
