[package]
name = "cmux-linux"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
adw = { package = "libadwaita", version = "0.9.1" }
base64 = "0.22"
gtk = { package = "gtk4", version = "0.11" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["serde", "v4"] }
vte4 = "0.10.0"
